--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,8 +1,8 @@
 name: java-keytool-steps
 version: 1.0.0
 rundeckPluginVersion: 1.2
-author: alexh
-date: Tue Feb 16 2016
+author: alexh and csinks
+date: Mon Sep 10 2018
 providers:
   - name: java-keytool-list-step
     service: RemoteScriptNodeStep
