--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,5 +1,5 @@
 name: java-keytool-steps
-version: 1.0.0
+version: 1.1.0
 rundeckPluginVersion: 1.2
 author: alexh and csinks
 date: Mon Sep 10 2018
@@ -182,6 +182,10 @@ providers:
         name: san
         title: Subject Alternative Name (Optional)
         description: "Comma-separated list of SANs. Ex: dns:hostname.domain.com,dns:hostalias.domain.com,ip:1.1.1.1"
+      - type: String
+        name: key_usage
+        title: Key Usage (Optional)
+        description: "Comma-separated list of valid Key Usages. Ex: digitalSignature,keyEncipherment,keyCertSign"
       - type: String
         name: jdk_home
         title: JDK Home
